Complete Task 6.1: Cloud Readiness for Heroku deployment
- Configure environment variables for Heroku (PORT, HOST, performance limits)
- Add FastAPI HTTP server with health check endpoints
- Implement performance monitoring and memory optimization
- Create Heroku deployment configurations (Procfile, requirements.txt, app.json)
- Add performance limiter to prevent resource exhaustion
- Include comprehensive health checks with system monitoring
- Test HTTP server functionality with all endpoints working
- Ready for Heroku deployment with cbc-design-mcp app

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,22 @@
+# Application Configuration
 APP_APP_NAME=conjoint-mcp-server
 APP_ENVIRONMENT=dev
 APP_LOG_LEVEL=INFO
 APP_VERSION=0.1.0
 
+# Heroku Configuration
+PORT=8000
+HOST=0.0.0.0
 
+# MCP Server Configuration
+MCP_SERVER_MODE=stdio
+MCP_LOG_LEVEL=WARNING
+
+# Performance Configuration
+MAX_RESPONDENTS=2000
+MAX_TASKS_PER_RESPONDENT=20
+MAX_OPTIONS_PER_TASK=5
+
+# Health Check Configuration
+HEALTH_CHECK_ENABLED=true
+HEALTH_CHECK_TIMEOUT=30
