--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dependencies = [
   "numpy>=1.26.0",
   "scipy>=1.11.0",
   "pandas>=2.2.0",
+  "fastapi>=0.104.0",
+  "uvicorn[standard]>=0.24.0",
+  "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
